--- a/tg-front/src/App.css
+++ b/tg-front/src/App.css
@@ -209,3 +209,10 @@
       height:100%;
        background-color: #d6c0ff85;
     }
+
+    #openPopupButton_3{
+      margin-bottom:120px;
+    }
+    #medical_option_5{
+      margin-bottom:120px;
+    }
