--- a/tg-front/src/App.css
+++ b/tg-front/src/App.css
@@ -71,6 +71,7 @@
         }
         .weight-picker {
             height: 100%;
+            padding-top: 8px;
             overflow-y: scroll;
             scrollbar-width: none; /* For Firefox */
             -ms-overflow-style: none;  /* Internet Explorer 10+ */
