--- a/tg-front/src/index.css
+++ b/tg-front/src/index.css
@@ -1,6 +1,6 @@
-*{
-  margin:0;
-  padding:0;
+body {
+    margin: 0;
+    padding: 0;
     font-family: "Onest", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
