--- a/tg-front/src/styles/application.css
+++ b/tg-front/src/styles/application.css
@@ -1,21 +1,28 @@
-@import url("telegram.css");
+@import url("theme_telegram.css");
 @import url("typography.css");
 
 body,
 #root,
 .main {
     width: 100%;
-    min-height: 100dvh;
+    max-height: var(--tg-viewport-height, 100dvh);
     padding: 0;
     margin: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* This is just to show borders to the main app */
+    justify-items: stretch;
+    font-size: 16px;
 }
 
 .container {
     width: 100%;
     max-width: 600px;
+    position: relative;
+}
+
+.page {
+    box-sizing: border-box;
+    min-height: var(--tg-viewport-height, 100dvh);
     padding: 20px;
 }
