--- a/tg-front/src/styles/theme_components.css
+++ b/tg-front/src/styles/theme_components.css
@@ -11,5 +11,99 @@ dialog::backdrop {
 }
 
 button {
-    border: none
+    border: none;
+}
+
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Old versions of Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome, Edge, Opera and Firefox */
+}
+
+input[type="range"] {
+    -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
+    width: 100%; /* Specific width is required for Firefox. */
+    background: transparent; /* Otherwise white in Chrome */
+    outline: none;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+}
+
+input[type="range"]:focus {
+    outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+}
+
+input[type="range"]::-ms-track {
+    width: 100%;
+    cursor: pointer;
+
+    /* Hides the slider so custom styles can be added */
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+}
+
+/* Special styling for WebKit/Blink */
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 2em;
+    height: 2em;
+    border-radius: 50%;
+    z-index: 3;
+    background-color: var(--theme_accent_color);
+    cursor: pointer;
+}
+
+/* All the same stuff for Firefox */
+input[type="range"]::-moz-range-thumb {
+    width: 2em;
+    height: 2em;
+    border-radius: 50%;
+    z-index: 3;
+    background-color: var(--theme_accent_color);
+    cursor: pointer;
+}
+
+/* All the same stuff for IE */
+input[type="range"]::-ms-thumb {
+    width: 2em;
+    height: 2em;
+    border-radius: 50%;
+    z-index: 3;
+    background-color: var(--theme_accent_color);
+    cursor: pointer;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 0.125em;
+    cursor: pointer;
+    background: var(--theme_text_hint_color);
+    z-index: 0;
+}
+
+input[type="range"]:focus::-webkit-slider-runnable-track {
+    background: transparent;
+}
+
+input[type="range"]::-moz-range-track {
+    width: 100%;
+    height: 0.125em;
+    cursor: pointer;
+    background: var(--theme_text_hint_color);
+    z-index: 0;
+}
+
+input[type="range"]::-ms-track {
+    width: 100%;
+    height: 0.125em;
+    cursor: pointer;
+    background: var(--theme_text_hint_color);
+    z-index: 0;
 }
