--- a/tg-front/src/styles/application.css
+++ b/tg-front/src/styles/application.css
@@ -1,6 +1,7 @@
 @import url("theme_telegram.css");
 @import url("typography.css");
 @import url("theme_components.css");
+@import url("embla.css");
 
 body,
 #root,
