--- a/tg-front/src/styles/embla.css
+++ b/tg-front/src/styles/embla.css
@@ -3,9 +3,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: fit-content;
+    max-width: 100%;
     height: 22.2rem;
-    max-width: 30rem;
     margin-left: auto;
     margin-right: auto;
 }
@@ -42,10 +42,12 @@
     height: 100%;
     display: flex;
     align-items: center;
-    min-width: 50%;
+    min-width: 4em;
+    max-width: 50%;
     justify-content: center;
     line-height: 1;
     font-size: 1.8rem;
+    gap: .5em;
 }
 .embla__ios-picker__scene {
     min-width: 100%;
@@ -56,7 +58,7 @@
     touch-action: pan-x;
 }
 .embla__ios-picker__viewport {
-    height: 32px;
+    height: 2em;
     width: 100%;
     perspective: 1000px;
     -webkit-user-select: none;
@@ -93,8 +95,10 @@
     opacity: 0;
 }
 .embla__ios-picker__label {
+    display: contents;
     font-weight: 700;
     transform: translateX(-55px);
     pointer-events: none;
     color: var(--theme_accent_color);
+    font-size: 1.8em;
 }
