--- a/tg-front/src/styles/theme_components.css
+++ b/tg-front/src/styles/theme_components.css
@@ -22,6 +22,9 @@ button {
     -ms-user-select: none; /* Internet Explorer/Edge */
     user-select: none; /* Non-prefixed version, currently
                                     supported by Chrome, Edge, Opera and Firefox */
+    -webkit-touch-callout: none;
+    -khtml-user-select: none;
+    -webkit-tap-highlight-color: transparent;
 }
 
 input[type="range"] {
