--- a/tg-front/src/styles/embla.css
+++ b/tg-front/src/styles/embla.css
@@ -93,6 +93,7 @@
     justify-content: center;
     backface-visibility: hidden;
     opacity: 0;
+    transition: color .1s;
 }
 .embla__ios-picker__label {
     display: contents;
