--- a/tg-front/src/styles/typography.css
+++ b/tg-front/src/styles/typography.css
@@ -6,3 +6,9 @@ h4,
 h5 {
     margin: 0;
 }
+
+body {
+    font-family: "Onest", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
