--- a/tg-front/src/styles/application.css
+++ b/tg-front/src/styles/application.css
@@ -1,3 +1,4 @@
+@import url("tailwind.css");
 @import url("theme_telegram.css");
 @import url("typography.css");
 @import url("theme_components.css");
@@ -17,8 +18,6 @@ body,
     width: 100%;
     overflow-x: hidden;
     max-height: var(--tg-viewport-height, 100dvh);
-    padding: 0;
-    margin: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
