--- a/tg-front/src/styles/theme_components.css
+++ b/tg-front/src/styles/theme_components.css
@@ -3,8 +3,21 @@ dialog {
     background-color: transparent;
 }
 
+dialog[open] {
+    animation: modalShowAnim 0.2s ease-out normal;
+}
+
+@keyframes modalShowAnim {
+    from {
+        transform: translateY(100%);
+    }
+
+    to {
+        transform: translateY(0%);
+    }
+}
+
 dialog::backdrop {
-    height: 100dvh;
     background-color: var(--theme_bg_secondary_color);
     backdrop-filter: blur(12px);
     opacity: 0.75;
@@ -29,6 +42,7 @@ button {
 
 input[type="range"] {
     -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
+    appearance: none;
     width: 100%; /* Specific width is required for Firefox. */
     background: transparent; /* Otherwise white in Chrome */
     outline: none;
