--- a/tg-front/src/app/styles/theme_components.css
+++ b/tg-front/src/app/styles/theme_components.css
@@ -38,6 +38,9 @@ button {
     -webkit-touch-callout: none;
     -khtml-user-select: none;
     -webkit-tap-highlight-color: transparent;
+
+    -webkit-user-drag: none;
+    pointer-events: none;
 }
 
 input[type="range"] {
